# django-termsandconditions

./: .gitignore  .gitpod.yml  .readthedocs.yaml  .scrutinizer.yml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  README.rst  __init__.py  manage.py  manage_test.py  mkdocs.yml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: pr_commenter.yml  python-package.yml  python-publish.yml
.run/: Test All.run.xml
devscripts/checkers/: coveragerc  pylintrc  run_checks.sh
devscripts/pypi/: pypi_bdist_dumb.bat  pypi_register.bat  pypi_register.sh  pypi_sdist.bat  pypi_update.bat  pypi_update.sh  pypi_upload.bat
devscripts/virtualenv/: setup_dev_env.bat  setup_dev_env.sh  setup_prod_env.sh
docs/: requirements.txt
termsandconditions/: __init__.py  admin.py  apps.py  decorators.py  forms.py  middleware.py  models.py  pipeline.py  signals.py  test_models.py  tests.py  translation.py  urls.py  views.py
termsandconditions/locale/en/LC_MESSAGES/: django.mo  django.po
termsandconditions/locale/pt_BR/LC_MESSAGES/: django.po
termsandconditions/locale/ru/LC_MESSAGES/: django.mo  django.po
termsandconditions/management/commands/: remove_old_version_acceptance.py
termsandconditions/migrations/: 0001_initial.py  0002_termsandconditions_info.py  0003_auto_20170627_1217.py  0004_auto_20201107_0711.py
termsandconditions/snippets/: termsandconditions.html
termsandconditions/static/termsandconditions/: modal.css  modal.js
termsandconditions/static/termsandconditions/css/: modal.css  view_accept.css
termsandconditions/templates/termsandconditions/: tc_accept_terms.html  tc_email_terms.html  tc_email_terms_form.html  tc_print_terms.html  tc_terms_required.html  tc_view_terms.html
termsandconditions/templates/termsandconditions/snippets/: termsandconditions.html
termsandconditions/templatetags/: terms_tags.py  termsandconditions.py
termsandconditions/tests/: test_models.py
termsandconditions_demo/: Pipfile  __init__.py  requirements.txt  requirements_ci.txt  requirements_dev.txt  requirements_staging.txt  run_tests.py  settings.py  settings_gondor.py  settings_local_template.py  settings_main.py  settings_pre_1_10.py  settings_test.py  settings_test_local_template.py  urls.py  views.py  wsgi.py
termsandconditions_demo/mediaroot/: README.txt
termsandconditions_demo/static/css/: termsandconditions.css
termsandconditions_demo/staticroot/: README.txt
termsandconditions_demo/templates/: 404.html  500.html  base.html  error.html  header.html  index.html  index_anon.html  secure.html  securetoo.html  terms_required.html
termsandconditions_demo/templates/registration/: logged_out.html  login.html
