[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "*/apps.py",
    "*/devscripts*",
    "*/docs/*",
    "*/local_settings_template.py",
    "*/manage.py",
    "*/migrations/*",
    "*/settings*",
    "*/setup.py",
    "*/tests*",
    "*/wsgi.py"
]

[tool.poetry]
authors = ["Tim White <tim@cyface.com>"]
classifiers = ["Development Status :: 5 - Production/Stable", "Framework :: Django", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Topic :: Internet :: WWW/HTTP"]
description = "Django app that enables users to accept terms and conditions of a site."
homepage = "https://github.com/cyface/django-termsandconditions"
license = "BSD"
name = "django-termsandconditions"
packages = [{ include = "termsandconditions" }, ]
readme = "README.md"
version = "2.0.12"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Django = ">2.2"

[tool.poetry.dev-dependencies]
black = "^24.4"
coverage = {extras = ["toml"], version = "^7.5"}
poetry = "^1.8.3"
ruff = "^0.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["migrations"]
lint.ignore = [
    "B904",
    "DJ001",
    "DJ008",
    "DJ012",
    "E501",
    "E722",
    "F403",
    "F405",
    "N806",
    "N815",
]
line-length = 88
lint.select = [
    "B",
    "B9",
    "C",
    "DJ",
    "DTZ",
    "E",
    "F",
    "N",
    "UP",
    "W",
]
[tool.ruff.lint.isort]
forced-separate = ["django"]

[tool.ruff.lint.mccabe]
max-complexity = 25
